--- a/src/app/auth/signup/signup.component.html
+++ b/src/app/auth/signup/signup.component.html
@@ -1,1 +1,60 @@
-<p>signup works!</p>
+<form #f="ngForm" (ngSubmit)="onFormSubmit(f)">
+  <mat-form-field>
+    <input
+      matInput
+      type="email"
+      placeholder="E-mail"
+      name="email"
+      ngModel
+      required
+      email
+      #email="ngModel"
+    />
+    <mat-error *ngIf="email.errors?.required"> Email is required </mat-error>
+    <mat-error *ngIf="email.errors?.email"> Enter a valid email </mat-error>
+  </mat-form-field>
+  <mat-form-field>
+    <input
+      matInput
+      type="password"
+      placeholder="Password"
+      name="password"
+      ngModel
+      required
+      minlength="6"
+      #password="ngModel"
+    />
+    <mat-hint align="end"> {{ password.value?.length }} / 6</mat-hint>
+    <mat-hint>Should be at least 6 characters long.</mat-hint>
+    <mat-error *ngIf="password.errors?.required">
+      Password is required
+    </mat-error>
+  </mat-form-field>
+
+  <mat-form-field>
+    <mat-label>Choose your Birthdate</mat-label>
+    <input
+      matInput
+      [matDatepicker]="picker"
+      [min]="minDate"
+      [max]="maxDate"
+      name="bdate"
+      ngModel
+      required
+      #bdate="ngModel"
+    />
+    <mat-error *ngIf="bdate.errors?.required">Birthdate is required</mat-error>
+
+    <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+    <mat-datepicker touchUi #picker disabled="false"></mat-datepicker>
+  </mat-form-field>
+
+  <button
+    type="submit"
+    mat-raised-button
+    color="primary"
+    [disabled]="f.invalid"
+  >
+    Signup
+  </button>
+</form>
