--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,1 +1,14 @@
-<p>home works!</p>
+<div class="home">
+  <section>
+    <h1>Activity</h1>
+    <p>Stay active and enjoy better health and more fun!</p>
+  </section>
+  <section>
+    <h1>Community</h1>
+    <p>Get to know other people who share your passion!</p>
+  </section>
+  <section>
+    <h1>Challenges</h1>
+    <p>Never stop! Dive into new challenges everyday.</p>
+  </section>
+</div>
