--- a/src/app/training/current-training/current-training.component.html
+++ b/src/app/training/current-training/current-training.component.html
@@ -1,1 +1,10 @@
-<p>current-training works!</p>
+<section class="training-wrapper">
+  <mat-progress-spinner color="primary" mode="determinate" [value]="progress">
+  </mat-progress-spinner>
+
+  <h2>{{ progress }}%</h2>
+  <p>Keep on going, you can do it</p>
+  <button mat-raised-button color="accent" (click)="stopExrecise()">
+    Stop
+  </button>
+</section>
