--- a/src/app/training/new-training/new-training.component.html
+++ b/src/app/training/new-training/new-training.component.html
@@ -1,1 +1,20 @@
-<p>new-training works!</p>
+<div class="card-wrapper">
+  <mat-card>
+    <mat-card-title> Time to start a workout </mat-card-title>
+    <mat-card-content>
+      <mat-form-field>
+        <mat-label>Select type of trainig</mat-label>
+        <mat-select name="traing">
+          <mat-option value="crunches"> Crunches </mat-option>
+          <mat-option value="ex2"> Ex2 </mat-option>
+          <mat-option value="ex3"> Ex3 </mat-option>
+        </mat-select>
+      </mat-form-field>
+    </mat-card-content>
+    <mat-card-actions>
+      <button mat-stroked-button color="primary" (click)="startTraining()">
+        Start
+      </button>
+    </mat-card-actions>
+  </mat-card>
+</div>
