--- a/src/app/training/training.component.html
+++ b/src/app/training/training.component.html
@@ -1,1 +1,15 @@
-<p>training works!</p>
+<mat-tab-group *ngIf="!isGoingTraining">
+  <mat-tab label="New Training">
+    <app-new-training
+      (startTrainingVal)="isGoingTraining = true"
+    ></app-new-training>
+  </mat-tab>
+  <mat-tab label="Past Trainings">
+    <app-past-trainings></app-past-trainings>
+  </mat-tab>
+</mat-tab-group>
+
+<app-current-training
+  *ngIf="isGoingTraining"
+  (stopTraining)="isGoingTraining = false"
+></app-current-training>
