adding dummy login/signup logic

--- a/src/app/auth/signup/signup.component.html
+++ b/src/app/auth/signup/signup.component.html
@@ -1,4 +1,6 @@
 <form #f="ngForm" (ngSubmit)="onFormSubmit(f)">
+  <h1>Signup</h1>
+
   <mat-form-field>
     <input
       matInput
@@ -39,6 +41,7 @@
       [min]="minDate"
       [max]="maxDate"
       name="bdate"
+      disabled
       ngModel
       required
       #bdate="ngModel"
