--- a/src/app/auth/login/login.component.css
+++ b/src/app/auth/login/login.component.css
@@ -3,6 +3,13 @@ form {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  margin-top: 2rem;
+}
+h1 {
+  color: #3f51b5;
+  text-align: center;
+  letter-spacing: 2px;
+  font-size: 2rem;
 }
 .mat-form-field {
   width: 50%;
@@ -12,7 +19,10 @@ button {
   padding: 0 5%;
 }
 
-@media (max-width: 420px) {
+@media (max-width: 480px) {
+  form {
+    margin-top: 1rem;
+  }
   .mat-form-field {
     width: 90%;
   }
