--- a/src/app/training/current-training/current-training.component.html
+++ b/src/app/training/current-training/current-training.component.html
@@ -1,4 +1,5 @@
 <section class="training-wrapper">
+  <p>{{ chosenExercise.name }} with {{ chosenExercise.duration }}</p>
   <mat-progress-spinner color="primary" mode="determinate" [value]="progress">
   </mat-progress-spinner>
 
