--- a/src/app/training/new-training/new-training.component.html
+++ b/src/app/training/new-training/new-training.component.html
@@ -1,23 +1,25 @@
 <div class="card-wrapper">
-  <mat-card>
-    <mat-card-title> Time to start a workout </mat-card-title>
-    <mat-card-content>
-      <mat-form-field>
-        <mat-label>Select type of trainig</mat-label>
-        <mat-select
-          name="training"
-          (selectionChange)="getSelectedExercise($event)"
-        >
-          <mat-option [value]="exercise.id" *ngFor="let exercise of exercises">
-            {{ exercise.name }}
-          </mat-option>
-        </mat-select>
-      </mat-form-field>
-    </mat-card-content>
-    <mat-card-actions>
-      <button mat-stroked-button color="primary" (click)="startTraining()">
-        Start
-      </button>
-    </mat-card-actions>
-  </mat-card>
+  <form #f="ngForm" (ngSubmit)="onSubmitForm(f)">
+    <mat-card>
+      <mat-card-title> Time to start a workout </mat-card-title>
+      <mat-card-content>
+        <mat-form-field>
+          <mat-label>Select type of trainig</mat-label>
+          <mat-select name="training" ngModel required>
+            <mat-option
+              [value]="exercise.id"
+              *ngFor="let exercise of exercises"
+            >
+              {{ exercise.name }}
+            </mat-option>
+          </mat-select>
+        </mat-form-field>
+      </mat-card-content>
+      <mat-card-actions>
+        <button mat-stroked-button color="primary" [disabled]="f.invalid">
+          Start
+        </button>
+      </mat-card-actions>
+    </mat-card>
+  </form>
 </div>
