--- a/src/app/training/past-trainings/past-trainings.component.html
+++ b/src/app/training/past-trainings/past-trainings.component.html
@@ -16,7 +16,7 @@
     <table mat-table [dataSource]="dataSource" matSort>
       <ng-container matColumnDef="date">
         <th mat-header-cell *matHeaderCellDef mat-sort-header>Date</th>
-        <td mat-cell *matCellDef="let row">{{ row.date | date }}</td>
+        <td mat-cell *matCellDef="let row">{{ row.date }}</td>
       </ng-container>
 
       <ng-container matColumnDef="name">
